--- a/Sermon Scrubber/Info.plist
+++ b/Sermon Scrubber/Info.plist
@@ -14,40 +14,39 @@
 			<key>NSUbiquitousDocumentUserActivityType</key>
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).exampledocument</string>
 		</dict>
-		<dict>
-			<key>CFBundleTypeName</key>
-			<string>Sermon Scrub Document</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>LSHandlerRank</key>
-			<string>Default</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>com.stevenhovater.sermonscrub.scrub</string>
-			</array>
-		</dict>
+        <dict>
+            <key>CFBundleTypeName</key>
+            <string>Sermon Scrub Document</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>LSHandlerRank</key>
+            <string>Owner</string>
+            <key>LSItemContentTypes</key>
+            <array>
+                <string>com.stevenhovater.sermonscrub.scrub</string>
+            </array>
+        </dict>
 	</array>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>com.apple.package</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>Sermon Scrub Document</string>
-			<key>UTTypeIcons</key>
-			<dict/>
-			<key>UTTypeIdentifier</key>
-			<string>com.stevenhovater.sermonscrub.scrub</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>scrub</string>
-				</array>
-			</dict>
-		</dict>
+        <dict>
+            <key>UTTypeConformsTo</key>
+            <array>
+                <string>public.data</string>
+                <string>public.content</string>
+            </array>
+            <key>UTTypeDescription</key>
+            <string>Sermon Scrub Document</string>
+            <key>UTTypeIdentifier</key>
+            <string>com.stevenhovater.sermonscrub.scrub</string>
+            <key>UTTypeTagSpecification</key>
+            <dict>
+                <key>public.filename-extension</key>
+                <array>
+                    <string>scrub</string>
+                </array>
+            </dict>
+        </dict>
 	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
